# Lisenfy-MVP

./: .gitignore  CAPTURE_MODULE_REFACTOR.md  COMMIT_GUIDELINES.md  LICENSE  PRIVACY_POLICY.md  README.md  REUTILIZACION_DE_WIDGETS.md  THIRD_PARTY_LICENSES.md  pubspec.yaml  www.youtube.com_cookies.txt  zapstore.yaml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  openal_bridge.cpp  openal_bridge_stub.cpp
assets/translations/: en.json  es.json
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/config/: api_config.dart
lib/app/controllers/: ..dart  media_actions_controller.dart
lib/app/core/: ARCHITECTURE_GETX.md  MIGRATION_GETX_PLAN.md
lib/app/models/: history_group.dart  media_item.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/services/: app_audio_handler.dart  audio_service.dart  capture_gallery_service.dart  instrumental_generation_service.dart  karaoke_flow_coordinator_service.dart  karaoke_recording_service.dart  karaoke_remote_pipeline_service.dart  karaoke_separation_agent.dart  local_media_metadata_service.dart  lyrics_service.dart  notification_service.dart  spatial8d_generation_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+246 files in other folders)
